welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:20: error: type mismatch;
 found   : Unit
 required: Int
  if((num == 16)){
  ^